<resources>
    <string name="app_name">IdeaFood</string>
    <string name="rep">trả lời</string>
    <string name="report">báo cáo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hiderep">ẩn trả lời</string>
    <string name="title">Idea Food</string>
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="email">Email</string>
    <string name="find">Tìm bài viết</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="homepage">Trang chủ</string>
    <string name="Logout">Đăng xuất</string>
    <string name="logout">Đăng xuất</string>
    <string name="myaccount">Tài khoản của tôi</string>
    <string name="dsxemsau">Danh sách xem sau</string>
    <string name="nhomatkhau">Nhớ tài khoản</string>
</resources>