<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/title"
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:textSize="32sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/ET_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="10dp"
                android:drawableTint="#EF5350"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColorHint="#EF5350"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/ET_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:drawableTint="#EF5350"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#EF5350"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>
    <CheckBox
        android:layout_marginLeft="10dp"
        android:id="@+id/saveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nhomatkhau"
        android:textColor="#EF5350"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BT_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#EF5350"
            android:text="@string/login"
            android:textSize="16sp"></Button>

        <Button
            android:id="@+id/BT_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="#EF5350"
            android:text="@string/signup"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Không muốn đăng nhập,"/>
        <TextView
            android:id="@+id/notaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" đăng nhập với tư cách khách"
            android:textColor="#EF5350"/>
    </LinearLayout>


</LinearLayout>